--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
->
+   >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black"
-        android:foregroundGravity="center_vertical|center_horizontal|center"></android.support.v7.widget.RecyclerView>
+        android:foregroundGravity="center_vertical|center_horizontal|center">
+
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
+
